--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5"
+gloo = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
+tokio = "1.34"
+yew = { version = "0.21.0",  features = ["csr"] }
