--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "rpg-helper"
+authors = ["Landon Kump"]
 version = "0.1.0"
 edition = "2021"
 
@@ -13,3 +14,5 @@ serde_json = "1.0"
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 tokio = "1.34"
 yew = { version = "0.21.0",  features = ["csr"] }
+yew-router = "0.18"
+yew_icons = { version = "0.8.0", features = ["LucideMenu"] }
