--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ yew = { version = "0.21.0",  features = ["csr"] }
 yew-router = "0.18"
 yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown"] }
 wasm-bindgen = "0.2"
+web-sys = "0.3.69"
