--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2021"
 bcrypt = "0.15" # A hashing algo for password salting
 clap = "4.5"
 gloo = "0.11"
+dotenv_codegen = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 tokio = "1.34"
 yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
