--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 [dependencies]
 actix-web = "4" # Backend for Webserver
 actix-cors = "0.7"
-config = "0.14"
-chrono = { version = "0.4", features = ["serde"] }
+anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
+toml = "0.8"
+uuid = { version="1.8.0", features=["serde","v4"] }
