--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ actix-web = "4" # Backend for Webserver
 actix-cors = "0.7"
 anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
+bincode = "1.3"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
