--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2021"
 clap = "4.5"
 chrono = { version = "0.4", features = ["serde"] }
 gloo = "0.11"
-dotenv_codegen = "0.15.0"
+dotenv = "0.15"
+reqwasm = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
