--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,7 +17,9 @@ serde_json = "1.0"
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 tokio = "1.34"
 uuid = { version="1.8.0", features=["serde","v4"] }
+validator = { version="0.18.1", features = ["derive"] }
 yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
+yewdux = "0.10.0"
 yew-router = "0.18"
 yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown"] }
 wasm-bindgen = "0.2"
