--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,6 +21,6 @@ validator = { version="0.18.1", features = ["derive"] }
 yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
 yewdux = "0.10.0"
 yew-router = "0.18"
-yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown"] }
+yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark"] }
 wasm-bindgen = "0.2"
 web-sys = "0.3.69"
