--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,6 +21,6 @@ validator = { version="0.18.1", features = ["derive"] }
 yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
 yewdux = "0.10.0"
 yew-router = "0.18"
-yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGearFill", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16"] }
+yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGear", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16", "BootstrapBoxArrowInLeft", "BootstrapReception0", "BootstrapReception1", "BootstrapReception2", "BootstrapReception3", "BootstrapReception4", "BootstrapSearch", "FeatherFeather", "FeatherServer", "HeroiconsOutlinePencilSquare", "OcticonsInfo24"] }
 wasm-bindgen = "0.2"
 web-sys = "0.3.69"
