--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,9 @@ anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
 bincode = "1.3"
 chrono = { version = "0.4", features = ["serde"] }
+env_logger = "0.11.0"
 jsonwebtoken = "9.3.0"
+log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
