--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 [dependencies]
 clap = "4.5"
 chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15.0"
 gloo = "0.11"
-dotenv = "0.15"
 reqwasm = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -24,3 +24,6 @@ yew-router = "0.18"
 yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGear", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16", "BootstrapBoxArrowInLeft", "BootstrapReception0", "BootstrapReception1", "BootstrapReception2", "BootstrapReception3", "BootstrapReception4", "BootstrapSearch", "FeatherFeather", "FeatherServer", "HeroiconsOutlinePencilSquare", "OcticonsInfo24"] }
 wasm-bindgen = "0.2"
 web-sys = "0.3.69"
+
+[build-dependencies]
+dotenv = "0.15.0"
