--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 [dependencies]
 actix-web = "4" # Backend for Webserver
 actix-cors = "0.7"
+actix-files = "0.6"
+actix-multipart = "0.6"
 anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
 bincode = "1.3"
