--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2021"
 clap = "4.5"
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
-gloo = "0.11"
-reqwasm = "0.5.0"
+gloo = { version = "0.11", features = [] }
+reqwasm = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
@@ -21,6 +21,6 @@ validator = { version="0.18.1", features = ["derive"] }
 yew = { version = "0.21.0",  features = ["csr"] } # Frontend Webdev
 yewdux = "0.10.0"
 yew-router = "0.18"
-yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGear", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16", "BootstrapBoxArrowInLeft", "BootstrapReception0", "BootstrapReception1", "BootstrapReception2", "BootstrapReception3", "BootstrapReception4", "BootstrapSearch", "FeatherFeather", "FeatherServer", "HeroiconsOutlinePencilSquare", "OcticonsInfo24"] }
+yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown", "FontAwesomeSolidXmark", "LucideLayoutDashboard", "BootstrapGear", "LucideHammer", "LucideMountainSnow", "BootstrapJournalText", "BootstrapMotherboard", "BootstrapPalette", "OcticonsPersonAdd16", "BootstrapBoxArrowInLeft", "BootstrapReception0", "BootstrapReception1", "BootstrapReception2", "BootstrapReception3", "BootstrapReception4", "BootstrapSearch", "FeatherFeather", "FeatherServer", "FeatherCornerDownRight", "BootstrapPersonPlus", "BootstrapCheckAll", "BootstrapPersonDashFill", "HeroiconsOutlinePencilSquare", "OcticonsInfo24", "LucideCircleSlashed"] }
 wasm-bindgen = "0.2"
 web-sys = "0.3.69"
