--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,3 +23,4 @@ serde_json = "1"
 sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
 toml = "0.8"
 uuid = { version="1.8.0", features=["serde","v4"] }
+once_cell = "1.19.0"
