--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -26,3 +26,4 @@ yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown",
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = ["DataTransfer", "DragEvent"] }
+once_cell = "1.19.0"
