--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -27,3 +27,4 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = ["DataTransfer", "DragEvent"] }
 once_cell = "1.19.0"
+futures = "0.3.30"
