--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rpg-helper-server"
+name = "rpg-helper"
 authors = ["Landon Kump"]
 version = "0.1.0"
 edition = "2021"
@@ -14,17 +14,20 @@ actix-multipart = "0.6"
 anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
 bincode = "1.3"
-clap = "4.5"
+clap = { version = "4.5", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
 env_logger = "0.11.0"
+futures = "0.3.30"
 gloo = { version = "0.11", features = [] }
 jsonwebtoken = "9.3.0"
 log = "0.4"
 reqwasm = "0.5"
 reqwest = { version = "0.12", features = ["multipart", "json"] }
+rustyline = "12.0.0"  # For better REPL experience
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+simplelog = "^0.12.0"
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 sled = { version = "0.34.7" } # Embedded database, so we don't have to deal with cloud servers / setting up SQL
 tokio = "1.34"
@@ -39,7 +42,6 @@ yew_icons = { version = "0.8.0", features = ["LucideMenu", "FeatherChevronDown",
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = ["DataTransfer", "DragEvent"] }
-futures = "0.3.30"
 
 [lib]
 name = "model"
