--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ actix-multipart = "0.6"
 anyhow = "1"
 bcrypt = "0.15" # A hashing algo for password salting
 bincode = "1.3"
-clap = { version = "4.5", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.5", features = ["derive"] }
+colored = "3" # Used to color terminal
 dotenv = "0.15.0"
 env_logger = "0.11.0"
 futures = "0.3.30"
