Die rolls complete, events specified

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ futures = "0.3.30"
 gloo = { version = "0.11", features = [] }
 jsonwebtoken = "9.3.0"
 log = "0.4"
+rand = "0.9.1"
 reqwasm = "0.5"
 reqwest = { version = "0.12.22", features = ["multipart", "json"] }
 rustyline = "16.0.0"  # For better REPL experience
