--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
+# builds
 /target
 /dist
-/Config.toml
-/database
-/database_test
-/files
-/uploads
+
+# Logs and temps
 *.log
-/*_database
-/database
+*.temp
+
+# config
 rustfmt.toml
-test
+
+# server data
+/server/data
+/server/Config.toml
