--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,10 @@ path = "src/main.rs"
 
 [dependencies]
 rpg-helper = { path = "../rpg-helper" }
+log = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 yew = { version = "0.21.0", features = ["csr"] }
 yewdux = "0.11.0"
 yew-router = "0.18"
