--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,6 +15,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 wasm-logger = "0.2.0"
+web-sys = "0.3.77"
 yew = { version = "0.21.0", features = ["csr"] }
 yewdux = "0.11.0"
 yew-router = "0.18"
