--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,6 +14,7 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
+validator = { version = "0.20", features = ["derive"] }
 wasm-logger = "0.2.0"
 web-sys = "0.3.77"
 yew = { version = "0.21.0", features = ["csr"] }
