--- a/rpg-helper/Cargo.toml
+++ b/rpg-helper/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = { workspace = true }
 stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
 toml = "0.9.4"
 once_cell = "1.19.0"
+string-interner = "0.19.0"
 
 [lib]
 name = "rpg_helper"
