--- a/rpg-helper/Cargo.toml
+++ b/rpg-helper/Cargo.toml
@@ -13,6 +13,7 @@ stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "mac
 toml = "0.9.4"
 once_cell = "1.19.0"
 string-interner = "0.19.0"
+uuid = { version="1.8.0", features=["serde","v4"] }
 
 [lib]
 name = "rpg_helper"
